Closed Bug 932025 Opened 11 years ago Closed 11 years ago

'may be used uninitialized' warnings in OldDebugAPI.cpp

Categories

(Core :: JavaScript Engine, defect)

All
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla28

People

(Reporter: jimb, Assigned: jimb)

Details

(Whiteboard: [qa-])

Attachments

(1 file)

G++ complains about uses of Maybe<AutoCompartment>, as it can't see that the AutoCompartment destructor only runs if its constructor also ran.
Attachment #823564 - Flags: review?(sphink)
Attachment #823564 - Flags: review?(sphink) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/9ce0a96f14da
Assignee: nobody → jimb
Flags: in-testsuite-
Target Milestone: --- → mozilla28
https://hg.mozilla.org/mozilla-central/rev/9ce0a96f14da
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: