Bug 932025: Don't use Maybe<AutoCompartment> in OldDebugAPI.cpp, to avoid dumb G++ warnings. r=sfink